tests/snapshots/sqlparser_snapshot__generic__tpch_12.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: l_shipmode
                quote_style: ~
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: sum
                      quote_style: ~
                  args:
                    - Unnamed:
                        Expr:
                          Case:
                            operand: ~
                            conditions:
                              - BinaryOp:
                                  left:
                                    BinaryOp:
                                      left:
                                        Identifier:
                                          value: o_orderpriority
                                          quote_style: ~
                                      op: Eq
                                      right:
                                        Value:
                                          SingleQuotedString: 1-URGENT
                                  op: Or
                                  right:
                                    BinaryOp:
                                      left:
                                        Identifier:
                                          value: o_orderpriority
                                          quote_style: ~
                                      op: Eq
                                      right:
                                        Value:
                                          SingleQuotedString: 2-HIGH
                            results:
                              - Value:
                                  Number:
                                    - "1"
                                    - false
                            else_result:
                              Value:
                                Number:
                                  - "0"
                                  - false
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: high_line_count
                quote_style: ~
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: sum
                      quote_style: ~
                  args:
                    - Unnamed:
                        Expr:
                          Case:
                            operand: ~
                            conditions:
                              - BinaryOp:
                                  left:
                                    BinaryOp:
                                      left:
                                        Identifier:
                                          value: o_orderpriority
                                          quote_style: ~
                                      op: NotEq
                                      right:
                                        Value:
                                          SingleQuotedString: 1-URGENT
                                  op: And
                                  right:
                                    BinaryOp:
                                      left:
                                        Identifier:
                                          value: o_orderpriority
                                          quote_style: ~
                                      op: NotEq
                                      right:
                                        Value:
                                          SingleQuotedString: 2-HIGH
                            results:
                              - Value:
                                  Number:
                                    - "1"
                                    - false
                            else_result:
                              Value:
                                Number:
                                  - "0"
                                  - false
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: low_line_count
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: orders
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: lineitem
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      BinaryOp:
                        left:
                          BinaryOp:
                            left:
                              BinaryOp:
                                left:
                                  Identifier:
                                    value: o_orderkey
                                    quote_style: ~
                                op: Eq
                                right:
                                  Identifier:
                                    value: l_orderkey
                                    quote_style: ~
                            op: And
                            right:
                              InList:
                                expr:
                                  Identifier:
                                    value: l_shipmode
                                    quote_style: ~
                                list:
                                  - Value:
                                      SingleQuotedString: MAIL
                                  - Value:
                                      SingleQuotedString: SHIP
                                negated: false
                        op: And
                        right:
                          BinaryOp:
                            left:
                              Identifier:
                                value: l_commitdate
                                quote_style: ~
                            op: Lt
                            right:
                              Identifier:
                                value: l_receiptdate
                                quote_style: ~
                    op: And
                    right:
                      BinaryOp:
                        left:
                          Identifier:
                            value: l_shipdate
                            quote_style: ~
                        op: Lt
                        right:
                          Identifier:
                            value: l_commitdate
                            quote_style: ~
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: l_receiptdate
                        quote_style: ~
                    op: GtEq
                    right:
                      TypedString:
                        data_type: Date
                        value: 1994-01-01
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: l_receiptdate
                    quote_style: ~
                op: Lt
                right:
                  BinaryOp:
                    left:
                      TypedString:
                        data_type: Date
                        value: 1994-01-01
                    op: Plus
                    right:
                      Interval:
                        value:
                          Value:
                            SingleQuotedString: "1"
                        leading_field: Year
                        leading_precision: ~
                        last_field: ~
                        fractional_seconds_precision: ~
        group_by:
          Expressions:
            - Identifier:
                value: l_shipmode
                quote_style: ~
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: l_shipmode
            quote_style: ~
        asc: ~
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

