tests/snapshots/sqlparser_snapshot__generic__tpch_13.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: c_count
                quote_style: ~
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: count
                      quote_style: ~
                  args:
                    - Unnamed: Wildcard
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: custdist
                quote_style: ~
        into: ~
        from:
          - relation:
              Derived:
                lateral: false
                subquery:
                  with: ~
                  body:
                    Select:
                      distinct: ~
                      top: ~
                      projection:
                        - UnnamedExpr:
                            Identifier:
                              value: c_custkey
                              quote_style: ~
                        - UnnamedExpr:
                            Function:
                              name:
                                - value: count
                                  quote_style: ~
                              args:
                                - Unnamed:
                                    Expr:
                                      Identifier:
                                        value: o_orderkey
                                        quote_style: ~
                              filter: ~
                              null_treatment: ~
                              over: ~
                              distinct: false
                              special: false
                              order_by: []
                      into: ~
                      from:
                        - relation:
                            Table:
                              name:
                                - value: customer
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins:
                            - relation:
                                Table:
                                  name:
                                    - value: orders
                                      quote_style: ~
                                  alias: ~
                                  args: ~
                                  with_hints: []
                                  version: ~
                                  partitions: []
                              join_operator:
                                LeftOuter:
                                  "On":
                                    BinaryOp:
                                      left:
                                        BinaryOp:
                                          left:
                                            Identifier:
                                              value: c_custkey
                                              quote_style: ~
                                          op: Eq
                                          right:
                                            Identifier:
                                              value: o_custkey
                                              quote_style: ~
                                      op: And
                                      right:
                                        Like:
                                          negated: true
                                          expr:
                                            Identifier:
                                              value: o_comment
                                              quote_style: ~
                                          pattern:
                                            Value:
                                              SingleQuotedString: "%special%requests%"
                                          escape_char: ~
                      lateral_views: []
                      selection: ~
                      group_by:
                        Expressions:
                          - Identifier:
                              value: c_custkey
                              quote_style: ~
                      cluster_by: []
                      distribute_by: []
                      sort_by: []
                      having: ~
                      named_window: []
                      qualify: ~
                  order_by: []
                  limit: ~
                  limit_by: []
                  offset: ~
                  fetch: ~
                  locks: []
                alias:
                  name:
                    value: c_orders
                    quote_style: ~
                  columns:
                    - value: c_custkey
                      quote_style: ~
                    - value: c_count
                      quote_style: ~
            joins: []
        lateral_views: []
        selection: ~
        group_by:
          Expressions:
            - Identifier:
                value: c_count
                quote_style: ~
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: custdist
            quote_style: ~
        asc: false
        nulls_first: ~
      - expr:
          Identifier:
            value: c_count
            quote_style: ~
        asc: false
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

