tests/snapshots/sqlparser_snapshot__generic__tpch_17.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - ExprWithAlias:
              expr:
                BinaryOp:
                  left:
                    Function:
                      name:
                        - value: sum
                          quote_style: ~
                      args:
                        - Unnamed:
                            Expr:
                              Identifier:
                                value: l_extendedprice
                                quote_style: ~
                      filter: ~
                      null_treatment: ~
                      over: ~
                      distinct: false
                      special: false
                      order_by: []
                  op: Divide
                  right:
                    Value:
                      Number:
                        - "7.0"
                        - false
              alias:
                value: avg_yearly
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: lineitem
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: part
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      BinaryOp:
                        left:
                          Identifier:
                            value: p_partkey
                            quote_style: ~
                        op: Eq
                        right:
                          Identifier:
                            value: l_partkey
                            quote_style: ~
                    op: And
                    right:
                      BinaryOp:
                        left:
                          Identifier:
                            value: p_brand
                            quote_style: ~
                        op: Eq
                        right:
                          Value:
                            SingleQuotedString: "Brand#23"
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: p_container
                        quote_style: ~
                    op: Eq
                    right:
                      Value:
                        SingleQuotedString: MED BOX
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: l_quantity
                    quote_style: ~
                op: Lt
                right:
                  Subquery:
                    with: ~
                    body:
                      Select:
                        distinct: ~
                        top: ~
                        projection:
                          - UnnamedExpr:
                              BinaryOp:
                                left:
                                  Value:
                                    Number:
                                      - "0.2"
                                      - false
                                op: Multiply
                                right:
                                  Function:
                                    name:
                                      - value: avg
                                        quote_style: ~
                                    args:
                                      - Unnamed:
                                          Expr:
                                            Identifier:
                                              value: l_quantity
                                              quote_style: ~
                                    filter: ~
                                    null_treatment: ~
                                    over: ~
                                    distinct: false
                                    special: false
                                    order_by: []
                        into: ~
                        from:
                          - relation:
                              Table:
                                name:
                                  - value: lineitem
                                    quote_style: ~
                                alias: ~
                                args: ~
                                with_hints: []
                                version: ~
                                partitions: []
                            joins: []
                        lateral_views: []
                        selection:
                          BinaryOp:
                            left:
                              Identifier:
                                value: l_partkey
                                quote_style: ~
                            op: Eq
                            right:
                              Identifier:
                                value: p_partkey
                                quote_style: ~
                        group_by:
                          Expressions: []
                        cluster_by: []
                        distribute_by: []
                        sort_by: []
                        having: ~
                        named_window: []
                        qualify: ~
                    order_by: []
                    limit: ~
                    limit_by: []
                    offset: ~
                    fetch: ~
                    locks: []
        group_by:
          Expressions: []
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by: []
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

